--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+Params: <%= params %>
+
+<a href="<%= doctors_index_path %>">
+  <button type="button" name="button">Soy Doctor</button>
+</a>
+
+<a href="https://www.google.com/">
+  <button type="button" name="button">Soy Paciente</button>
+</a>
