added auth required for profile page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,6 @@ Params: <%= params %>
   <button type="button" name="button">Soy Doctor</button>
 </a>
 
-<a href="https://www.google.com/">
+<a href="<%= patients_index_path %>">
   <button type="button" name="button">Soy Paciente</button>
 </a>
