--- a/app/views/doctors/profile.html.erb
+++ b/app/views/doctors/profile.html.erb
@@ -2,6 +2,7 @@
 
 <table>
     <thead>
+      <th>ID</th>
       <th>RUT</th>
       <th>Nombres Doctor</th>
       <th>Apellidos Doctor</th>
@@ -9,15 +10,60 @@
       <th>email</th>
     </thead>
 
-    <tbody>
-        <tr>
+    <tbody >
+        <tr id="solo-ver">
+          <td><%= @doctor.id %></td>
           <td><%= @doctor.RUT %></td>
           <td><%= @doctor.names %></td>
           <td><%= @doctor.surnames %></td>
           <td><%= @doctor.specialty %></td>
           <td><%= @doctor.email %></td>
        </tr>
+
+       <tr class="editando">
+         <!-- <form class="" action="index.html" method="post">   -->
+         <form action="/action_page.php">
+           <td>
+             <input type="text" name="id" value="<%= @doctor.id %>">
+           </td>
+           <td>
+             <input type="text" name="RUT" value="<%= @doctor.RUT %>">
+           </td>
+           <td>
+             <input type="text" name="names" value="<%= @doctor.names %>">
+           </td>
+           <td>
+             <input type="text" name="surnames" value="<%= @doctor.surnames %>">
+           </td>
+           <td>
+             <input type="text" name="specialty" value="<%= @doctor.specialty %>">
+           </td>
+           <td>
+             <input type="text" name="email" value="<%= @doctor.email %>">
+           </td>
+      </tr>
+
     </tbody>
 </table>
+          <input class="editando" type="submit" value="Listo">
+        </form>
+<p>
+<button type="button" name="button" id="editar">Editar perfil</button>
 
-<%= render "boletas" %>
+<script>
+  $(document).ready(function(){
+    $('.editando').hide();
+    $('#listo').hide();
+    console.log('jQuery está funcionando');
+
+    $('#editar').click(function(){
+      $('#solo-ver').hide();
+      $('.editando').show();
+      $('#editar').hide();
+    });
+  });
+</script>
+
+
+
+<%= render "boletas", boletas: @boletas %>
