--- a/app/views/doctors/profile.html.erb
+++ b/app/views/doctors/profile.html.erb
@@ -19,46 +19,51 @@
           <td><%= @doctor.specialty %></td>
           <td><%= @doctor.email %></td>
        </tr>
+   </tbody>
 
-       <tr class="editando">
-         <!-- <form class="" action="index.html" method="post">   -->
-         <form action="/action_page.php">
-           <td>
-             <input type="text" name="id" value="<%= @doctor.id %>">
-           </td>
-           <td>
-             <input type="text" name="RUT" value="<%= @doctor.RUT %>">
-           </td>
-           <td>
-             <input type="text" name="names" value="<%= @doctor.names %>">
-           </td>
-           <td>
-             <input type="text" name="surnames" value="<%= @doctor.surnames %>">
-           </td>
-           <td>
-             <input type="text" name="specialty" value="<%= @doctor.specialty %>">
-           </td>
-           <td>
-             <input type="text" name="email" value="<%= @doctor.email %>">
-           </td>
-      </tr>
-
-    </tbody>
-</table>
-          <input class="editando" type="submit" value="Listo">
+   <tbody id="editando">
+         <form action="<%= doctors_update_path %>" method="post">
+           <%= token_tag %>
+           <tr>
+             <!-- <form class="" action="index.html" method="post">   -->
+               <td>
+                 <input type="text" name="id" value="<%= @doctor.id %>">
+               </td>
+               <td>
+                 <input type="text" name="doctor[RUT]" value="<%= @doctor.RUT %>">
+               </td>
+               <td>
+                 <input type="text" name="doctor[names]" value="<%= @doctor.names %>">
+               </td>
+               <td>
+                 <input type="text" name="doctor[surnames]" value="<%= @doctor.surnames %>">
+               </td>
+               <td>
+                 <input type="text" name="doctor[specialty]" value="<%= @doctor.specialty %>">
+               </td>
+               <td>
+                 <input type="text" name="doctor[email]" value="<%= @doctor.email %>">
+               </td>
+          </tr>
+          <tr>
+            <input type="submit" value="Listo">
+          </tr>
         </form>
+  </tbody>
+
+</table>
 <p>
 <button type="button" name="button" id="editar">Editar perfil</button>
 
 <script>
   $(document).ready(function(){
-    $('.editando').hide();
+    $('#editando').hide();
     $('#listo').hide();
     console.log('jQuery está funcionando');
 
     $('#editar').click(function(){
       $('#solo-ver').hide();
-      $('.editando').show();
+      $('#editando').show();
       $('#editar').hide();
     });
   });
