added sign in with google (pending create new user with google

--- a/app/views/doctors/profile.html.erb
+++ b/app/views/doctors/profile.html.erb
@@ -22,8 +22,9 @@
    </tbody>
 
    <tbody id="editando">
-         <form action="<%= doctors_update_path %>" method="post">
-           <%= token_tag %>
+         <!-- <form action="<#%= doctors_update_path %>" method="post"> -->
+           <form id="para-ajax">
+           <!-- <#%= token_tag %>  hay que recuperarlo de ajax -->
            <tr>
              <!-- <form class="" action="index.html" method="post">   -->
                <td>
