--- a/app/views/doctors/_about.html.erb
+++ b/app/views/doctors/_about.html.erb
@@ -1,5 +1,7 @@
 <h2>Please sign in here</h2>
 <%= link_to "Log in", new_doctor_session_path %>
 <br>
+<%= link_to "Sign in with Google", doctor_google_oauth2_omniauth_authorize_path %>
+<br>
 <h1>If you don't have an account, You should totally create an account Doc</h1>
 <%= link_to "Sign up", new_doctor_registration_path %>
