--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,15 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-Params: <%= params %>
-
+<!--
+Params: <#%= params %>
+-->
 <a href="<%= doctors_index_path %>">
   <button type="button" name="button">Soy Doctor</button>
 </a>
-
+<br>
+<br>
+<br>
 <a href="<%= patients_index_path %>">
   <button type="button" name="button">Soy Paciente</button>
 </a>
