--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
     <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
+
+
+      <% if (current_doctor || current_patient)  %>
         <header id="header">
           <div class="inner">
             <!-- Nav -->
@@ -43,10 +46,18 @@
         <nav id="menu">
           <h2>Menu</h2>
           <ul>
-            <li><%= link_to "Soy Doctor", doctors_index_path%></li>
-            <li><%= link_to "Soy Paciente", patients_index_path%></li>
+            <% if (current_doctor)  %>
+              <li><%= link_to "Log out", destroy_doctor_session_path, method: :delete%></li>
+              <li><%= link_to "Ver mi perfil", doctors_profile_path%></li>
+            <% elsif (current_patient) %>
+              <li><%= link_to "Log out", destroy_doctor_session_path, method: :delete%></li>
+              <li><%= link_to "Ver mi perfil", doctors_profile_path%></li>
+            <% else %>
+              <li> Esto no se deberia estar mostrando </li>
+            <% end %>
           </ul>
         </nav>
+      <% end %>
 
 
         <!-- Main -->
