--- a/app/views/doctors/profile.html.erb
+++ b/app/views/doctors/profile.html.erb
@@ -10,66 +10,66 @@
       <th>email</th>
     </thead>
 
-    <tbody >
-        <tr id="solo-ver">
+    <tbody id="solo-ver">
+        <tr >
           <td><%= @doctor.id %></td>
           <td><%= @doctor.RUT %></td>
           <td><%= @doctor.names %></td>
           <td><%= @doctor.surnames %></td>
           <td><%= @doctor.specialty %></td>
           <td><%= @doctor.email %></td>
+          <td>
+            <button type="button" name="button" id="editar">Editar perfil</button>
+          </td>
        </tr>
    </tbody>
 
-   <tbody id="editando">
+<tbody class="editando">
+       <%= form_for :doctor, url: doctors_update_path, method: :post do |f| %>
+         <%= f.text_field :id, value: @doctor.id %>
+         <%= f.text_field :RUT, value: @doctor.RUT %>
+         <%= f.text_field :names, value: @doctor.names %>
+         <%= f.text_field :surnames, value: @doctor.surnames %>
+         <%= f.text_field :specialty, value: @doctor.specialty %>
+         <%= f.text_field :email, value: @doctor.email %>
+         <%= f.submit "Aplicar cambios" %>
+       <% end %>
+ </tbody>
+
+
+   <tbody class="editando">
          <!-- <form action="<#%= doctors_update_path %>" method="post"> -->
-           <form id="para-ajax">
-           <!-- <#%= token_tag %>  hay que recuperarlo de ajax -->
-           <tr>
-             <!-- <form class="" action="index.html" method="post">   -->
-               <td>
-                 <input type="text" name="id" value="<%= @doctor.id %>">
-               </td>
-               <td>
-                 <input type="text" name="doctor[RUT]" value="<%= @doctor.RUT %>">
-               </td>
-               <td>
-                 <input type="text" name="doctor[names]" value="<%= @doctor.names %>">
-               </td>
-               <td>
-                 <input type="text" name="doctor[surnames]" value="<%= @doctor.surnames %>">
-               </td>
-               <td>
-                 <input type="text" name="doctor[specialty]" value="<%= @doctor.specialty %>">
-               </td>
-               <td>
-                 <input type="text" name="doctor[email]" value="<%= @doctor.email %>">
-               </td>
-          </tr>
-          <tr>
-            <input type="submit" value="Listo">
-          </tr>
+         <form id="para-ajax" method="post" action="<%= doctors_update_path %>">
+             <%= token_tag %>
+             <tr>
+               <!-- <form class="" action="index.html" method="post">   -->
+                 <td>
+                   <input type="text" name="id" value="<%= @doctor.id %>">
+                 </td>
+                 <td>
+                   <input type="text" name="doctor[RUT]" value="<%= @doctor.RUT %>">
+                 </td>
+                 <td>
+                   <input type="text" name="doctor[names]" value="<%= @doctor.names %>">
+                 </td>
+                 <td>
+                   <input type="text" name="doctor[surnames]" value="<%= @doctor.surnames %>">
+                 </td>
+                 <td>
+                   <input type="text" name="doctor[specialty]" value="<%= @doctor.specialty %>">
+                 </td>
+                 <td>
+                   <input type="text" name="doctor[email]" value="<%= @doctor.email %>">
+                 </td>
+                 <td>
+                   <input type="submit" value="Listo">
+                 </td>
+            </tr>
+            <tr id="listo">
+            </tr>
         </form>
   </tbody>
 
 </table>
-<p>
-<button type="button" name="button" id="editar">Editar perfil</button>
-
-<script>
-  $(document).ready(function(){
-    $('#editando').hide();
-    $('#listo').hide();
-    console.log('jQuery está funcionando');
-
-    $('#editar').click(function(){
-      $('#solo-ver').hide();
-      $('#editando').show();
-      $('#editar').hide();
-    });
-  });
-</script>
-
-
 
 <%= render "boletas", boletas: @boletas %>
