fixed issues related to javascript loading of phantom

--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -45,7 +45,7 @@
                 <% if app.invoice_id %>
                   <p><%="Boleta numero #{Invoice.find(app.invoice_id).invoice_num}" %></p>
                 <% else %>
-                  <div id="add-to-existing-button" class="add-to-existing-button">
+                  <div id="add-to-existing-butt" class="add-to-existing-butt">
                     <button type="button" name="button">Anadir a boleta existente</button>
                   </div>
                 <% end %>
