--- a/app/views/doctors/profile.html.erb
+++ b/app/views/doctors/profile.html.erb
@@ -1,5 +1,5 @@
 
-
+<h2>Mis Datos</h2>
 <table>
     <thead>
       <th>ID</th>
@@ -72,4 +72,5 @@
 
 </table>
 
+<h2>Mis Boletas</h2>
 <%= render "boletas", boletas: @boletas %>
